[package]
name = "oasis-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
#winit = { version = "0.30", features = ["rwh_06"] }
egui = { version = "0.33.3", features = ["bytemuck", "persistence", "serde", "rayon"] }
eframe = { version = "0.33.3", features = ["persistence"] }
#egui-winit = "0.33.3"
#egui-wgpu = "0.33.3"
pollster = "0.4.0"
rayon = "1.11.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
approx = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen-futures = { version = "0.4.56" }
log = "0.4.29"
web-sys = "0.3.83"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"